--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p>Cowles Foundation Postdoctoral Associate, Yale University</p>
       </header>
       <section>
-        <p>I am currently a postdoc at the Cowles Foundation. I will join Yale University as Assistant Professor of Economics in July 2023. My research is in econometrics and causal inference, with a special focus on the design of experiments. 
+        <p>I am currently a postdoc at the Cowles Foundation. I will join Yale University as Assistant Professor of Economics in July 2023. My research is in econometrics and causal inference, with a special interest in the design of experiments. 
         My CV can be found <a href="files/cv.pdf">here</a>.</p> 
 
 
