--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h1>Working Papers</h1>
 
         <p>"Covariate Adjustment in Stratified Experiments." <a href="files/adjustment.pdf">Paper</a>. February 2023.</p>
-        <p>"Designing Representative and Balanced Experiments by Local Randomization." <a href="files/local.pdf">Paper</a>. November 2022.</p>
+        <p>"Optimal Stratification of Survey Experiments." <a href="files/local.pdf">Paper</a>. May 2023.</p>
         <p>"Blocked Clusterwise Regression." <a href="files/blocked.pdf">Paper</a>. December 2021.</p>
 
       </section>
