--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <header>
         <h1><a href="https://www.maxcytrynbaum.com"><b>Max Cytrynbaum</b></a></h1>
         <img src="files/max cytrynbaum.jpeg" alt="Max Cytrynbaum">
-        <p>Cowles Foundation Postdoctoral Associate, Yale University</p>
+        <p>Assistant Professor of Economics, Yale University</p>
       </header>
       <section>
-        <p>I am currently a postdoc at the Cowles Foundation. I will join Yale University as Assistant Professor of Economics in July 2023. My research is in econometrics and causal inference, with a special interest in the design of experiments. 
+        <p>I am an Assistant Professor of Economics at Yale University. My research is in econometrics and causal inference, with a special interest in the design of experiments. 
         My CV can be found <a href="files/cv.pdf">here</a>.</p> 
 
 
