--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <h1>Working Papers</h1>
 
-        <p>"Finely Stratified Reandomization Designs." <a href="files/rerand.pdf">Paper</a>. July 2024.</p>
+        <p>"Finely Stratified Rerandomization Designs." <a href="files/rerand.pdf">Paper</a>. July 2024.</p>
         <p>"Optimal Stratification of Survey Experiments." <a href="files/local.pdf">Paper</a>. March 2024.</p>
         <p>"Covariate Adjustment in Stratified Experiments." <a href="files/adjustment.pdf">Paper</a>. March 2024.</p>
         <p>"Blocked Clusterwise Regression." <a href="files/blocked.pdf">Paper</a>. December 2021.</p>
