--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <p>"Optimal Stratification of Survey Experiments." <a href="files/local.pdf">Paper</a>. March 2024.</p>
         <p>"Covariate Adjustment in Stratified Experiments." <a href="files/adjustment.pdf">Paper</a>. March 2024.</p>
         <p>"Blocked Clusterwise Regression." <a href="files/blocked.pdf">Paper</a>. December 2021.</p>
-        <p>"Using Lattice Geometry to Find All Stable Allocations." <a href="files/blocked.pdf">Paper</a>. June 2015.</p>
+        <p>"Using Lattice Geometry to Find All Stable Allocations." <a href="files/cones.pdf">Paper</a>. June 2015.</p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small>.</p>
