--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <h2>Published Papers</h2>
 
-        <p>"Covariate Adjustment in Stratified Experiments." <em>Quantitative Economics</em> 15, no. 4 (2024): 971-998. <a href="files/adjustment.pdf">Paper</a>. 
+        <p>"Covariate Adjustment in Stratified Experiments." <em>Quantitative Economics,</em> 2024; 15(4): 971-998. <a href="files/adjustment.pdf">Paper</a>. 
 
         <h2>Working Papers</h2>
 
